js/js.translator/testData/incremental/invalidation/class/lib1/l1.1_data_class.kt
// TODO: After KT-51088, m.kt from main module must be dirty
data class Demo(val x: Int) {
}
